cambio en el makefile

--- a/Client/Makefile
+++ b/Client/Makefile
@@ -2,7 +2,7 @@ hello:
 	echo "Hello Client"
 
 build:
-	go build -o bin/main cliente.go
+	go build -o bin/main cliente.go localhost:50051 localhost:50052 localhost:50053 localhost:50055
 
 run:
-	go run cliente.go
+	go run cliente.go localhost:50051 localhost:50052 localhost:50053 localhost:50055
