--- a/DataNode1/Makefile
+++ b/DataNode1/Makefile
@@ -2,8 +2,8 @@ hello:
 	echo "Hello nameNode"
 
 build:
-	go build -o bin/main dataNode1.go
+	go build -o bin/main dataNode1.go localhost:50051 localhost:50052 localhost:50053 localhost:50055
 
 run:
-	go run dataNode1.go
+	go run dataNode1.go localhost:50051 localhost:50052 localhost:50053 localhost:50055
 	
