--- a/NameNode/Makefile
+++ b/NameNode/Makefile
@@ -2,8 +2,8 @@ hello:
 	echo "Hello nameNode"
 
 build:
-	go build -o bin/main nameNode.go
+	go build -o bin/main nameNode.go localhost:50051 localhost:50052 localhost:50053 
 
 run:
-	go run nameNode.go
+	go run nameNode.go localhost:50051 localhost:50052 localhost:50053 
 	
