--- a/DataNode2/Makefile
+++ b/DataNode2/Makefile
@@ -2,7 +2,7 @@ hello:
 	echo "Hello dataNode2"
 
 build:
-	go build -o bin/main dataNode2.go
+	go build -o bin/main dataNode2.go localhost:50051 localhost:50052 localhost:50053 localhost:50055
 
 run:
-	go run dataNode2.go
+	go run dataNode2.go localhost:50051 localhost:50052 localhost:50053 localhost:50055
