--- a/DataNode3/Makefile
+++ b/DataNode3/Makefile
@@ -2,7 +2,7 @@ hello:
 	echo "Hello dataNode3"
 
 build:
-	go build -o bin/main dataNode3.go
+	go build -o bin/main dataNode3.go localhost:50051 localhost:50052 localhost:50053 localhost:50055
 
 run:
-	go run dataNode3.go
+	go run dataNode3.go localhost:50051 localhost:50052 localhost:50053 localhost:50055
