--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-./Client/Makefile
-./DataNode1/Makefile
-./DataNode2/Makefile
-./DataNode3/Makefile
-./NameNode/Makefile
+Client/Makefile
+DataNode1/Makefile
+DataNode2/Makefile
+DataNode3/Makefile
+NameNode/Makefile
