--- a/Client/Makefile
+++ b/Client/Makefile
@@ -2,7 +2,7 @@ hello:
 	echo "Hello Client"
 
 build:
-	go build -o bin/main cliente.go localhost:50051 localhost:50052 localhost:50053 localhost:50055
+	go build -o bin/main 10.10.28.52:50051 10.10.28.53:50052 10.10.28.54:50053 10.10.28.55:50055
 
 run:
-	go run cliente.go localhost:50051 localhost:50052 localhost:50053 localhost:50055
+	go run cliente.go 10.10.28.52:50051 10.10.28.53:50052 10.10.28.54:50053 10.10.28.55:50055
