--- a/NameNode/Makefile
+++ b/NameNode/Makefile
@@ -2,8 +2,8 @@ hello:
 	echo "Hello nameNode"
 
 build:
-	go build -o bin/main nameNode.go localhost:50051 localhost:50052 localhost:50053 
+	go build -o bin/main nameNode.go 10.10.28.52:50051 10.10.28.53:50052 10.10.28.54:50053
 
 run:
-	go run nameNode.go localhost:50051 localhost:50052 localhost:50053 
+	go run nameNode.go 10.10.28.52:50051 10.10.28.53:50052 10.10.28.54:50053 
 	
